alpha5a:
* Server entries from the old config get autoimported to the new one now.

alpha5:
+ Changed config format to a more superior one.
  * Passwords and permissions are not yet implemented.
* Items now fall out of an Ender Transmitter on break.
* Fixed the Ender Transmitter GUI refreshing to work a /lot/ better.

alpha4:
+ Add support for OpenBlocks crayons/glasses and Thermal Expansion energy storage sending
+ Added heuristic-esque NBT tag detection.
  * This will work on custom books and enchanted items, so you don't need to register these.
* Fix NBT sending over servers.

alpha3:
+ Add /eninfo command for devs to get information on their blocks.
* Fix maps being sendable.

alpha2:
- Remove extra debug code that stopped EnderNet from launching.

alpha1:
/ First release.